fixed css issues on mobile

--- a/src/components/customOfferings/customOfferings.scss
+++ b/src/components/customOfferings/customOfferings.scss
@@ -7,6 +7,9 @@
 
   flex-direction: column;
   justify-content: center;
+  @include mobile {
+    height: 50%;
+  }
 
   .titleContainer {
     // flex: 1;
@@ -16,14 +19,14 @@
     gap: 50px;
     @include mobile {
       margin-top: 10px;
-      font-size: 16px;
+      font-size: 60px;
     }
 
     h1 {
       font-size: 96px;
       font-weight: 100;
       @include mobile {
-        font-size: 36px;
+        font-size: 50px;
       }
     }
   }
@@ -41,8 +44,9 @@
     font-weight: bolder;
     font-style: normal;
     @include mobile {
-      font-size: 12.5px;
+      font-size: 25px;
       padding: 8px 15px 2px 15px;
+      margin-left: 30px;
     }
   }
 }
