--- a/src/components/qAndA/QA.scss
+++ b/src/components/qAndA/QA.scss
@@ -76,7 +76,7 @@
       gap: 15px;
       h2 {
         @include mobile {
-          font-size: 9.5px;
+          font-size: 15px;
         }
       }
       @include mobile {
@@ -91,11 +91,11 @@
         font-weight: bolder;
         font-style: normal;
         @include mobile {
-          font-size: 8px;
+          font-size: 15px;
         }
         ul {
           li {
-            font-size: 20px;
+            font-size: 10px;
             font-family: "Montaga", serif;
             font-weight: bolder;
             font-style: normal;
